--- a/topics/sample-code-from-the-earlier-er-diagrams.qmd
+++ b/topics/sample-code-from-the-earlier-er-diagrams.qmd
@@ -1,5 +1,6 @@
 ---
 title: Sample code from the earlier ER diagrams.
+tags: []
 ---
 
 {{< include '_sample-code-from-the-earlier-er-diagrams.qmd' >}}
