--- a/topics/database-design-process.qmd
+++ b/topics/database-design-process.qmd
@@ -1,5 +1,8 @@
 ---
 title: Database design process
+tasl:
+  source: fa2023\lectures\lect02-entity-relation-models-1.qmd
+  topic: Database design process
 ---
 
 {{< include '_database-design-process.qmd' >}}
