--- a/fa2024/lectures/lecture-01.qmd
+++ b/fa2024/lectures/lecture-01.qmd
@@ -25,9 +25,11 @@ discussion_items = [
 
 lecture_topics = [
     'Course overview',
-    'Introduction to databases'
+    'Intro to databases'
 ]
 ```
+
+{{< include "./_template-housekeeping.qmd" >}}
 
 {{< include ../../topics/_cmsc408-overview.qmd >}}
 
