--- a/topics/_cmsc408-overview.qmd
+++ b/topics/_cmsc408-overview.qmd
@@ -1,10 +1,9 @@
 ## I'm glad you're here!!!!
 
+&nbsp;
+
 :::: {.columns}
 
-::: {.column}
-![<https://spectrum.ieee.org/the-rise-of-sql>](assets/L01-rise-of-sql.png){fig-align="center"}
-:::
 ::: {.column}
 ### CMSC 508 - Database Theory
 
@@ -16,6 +15,11 @@ Design and implementation of relational database systems. Emphasis is placed on 
 
 Students will be required to complete a design project and give an oral presentation of the project.
 :::
+::: {.column}
+![<https://spectrum.ieee.org/the-rise-of-sql>](assets/L01-rise-of-sql.png){fig-align="center"}
+:::
+
+
 ::::
 
 ## Recommended Textbooks
@@ -63,78 +67,140 @@ No, you don't. These textbooks are *really good* and package lots of information
 * See [this document](https://virginiacommonwealth.instructure.com/courses/105097/files/12032089?wrap=1) to learn more!
 
 
-## Learning objectives
+## ABET Student Learning Outcomes
 
 ::: {.more-separation}
 
-* SLO1 - Analyze a complex computing problem and apply principles of computing and other relevant disciplines to identify solutions;
+SLO1 - *Analyze a complex computing problem and apply principles of computing and other relevant disciplines to identify solutions;*
 
-* SLO2 - Design, implement and evaluate a computing-based solution to meet a given set of computing requirements in the context of the program’s discipline;
+SLO2 - *Design, implement and evaluate a computing-based solution to meet a given set of computing requirements in the context of the program’s discipline;*
 
-* SLO3 - Communicate effectively in a variety of professional contexts;
+SLO3 - *Communicate effectively in a variety of professional contexts;*
 
-* SLO4 - Recognize professional responsibilities and make informed judgments in computing practice based on legal and ethical principles;
+SLO4 - *Recognize professional responsibilities and make informed judgments in computing practice based on legal and ethical principles;*
 
-* SLO5 - Function effectively as a member or leader of a team engaged in activities appropriate to the program’s discipline;
+SLO5 - *Function effectively as a member or leader of a team engaged in activities appropriate to the program’s discipline;*
 
-* SLO6 - Apply computer science theory and software development fundamentals to produce computing-based solutions;
+SLO6 - *Apply computer science theory and software development fundamentals to produce computing-based solutions;*
+
+SLO7 - *Acquire and apply new knowledge as needed, using appropriate learning strategies.*
 
 :::
 
-## Learning outcomes
+## CMSC 408 - Learning Outcomes
+
+::: {style="font-size:90%;"}
+
+1. Demonstrate an understanding of the concepts underlying database design. *(ABET SLO 1, SLO 7)*
+
+1. Analyze problems to identify data requirements, types and relations. *(SLO 1)*
+
+1. Create E-R and relational designs from problem statements. *(SLO 2)*
+
+1. Design data structures and functions to store and process the information. *(SLO 2)*
+
+1. Design and implement databases using SQL language. *(SLO 6)*
+
+1. Query and manipulate data using SQL language. *(SLO 6)*
+
+1. Design and implement reports using data queried from a database. *(SLO 3, SLO 6)*
+
+1. Work effectively as part of a team to design, implement and deploy a database-driven web application *(SLO 5)*
+
+1. Communicate project requirements, design decisions, and progress effectively to team members and stakeholder *(SLO 3)*
+
+1. Incorporate strategies to ensure safe and secure storage and access to the database. *(SLO 4)*
+:::
+
+## CMSC 408 - Tool sets and rationale
+
+:::: {.columns}
+::: {.column width="35%"}
+### Tool sets we'll be using ...
 
 ::: {.more-separation}
+* SQL, MySQL, and SQLITE
 
-* Demonstrate an understanding of the concepts underlying database design.
+* VSCODE and various extensions
 
-* Analyze problems to identify data requirements, types and relations.
+* Quarto, mermaid and graphviz
 
-* Create E-R and relational designs from problem statements.
+* GIT, GH and GITHUB
 
-* Design data structures and functions to store and process the information.
+* Python, Pyenv and Poetry
 
-* Design and implement databases using SQL language.
-
-* Query and manipulate data using SQL language.
-
-* Design and implement reports using data queried from a database.
+* Docker and docker compose
+:::
 
 :::
 
-## Topics over time
+::: {.column width=65%}
+### What you should expect ...
 
-The class organized in modules. The GANNT chart below highlights the topics and their order. Homework assignments reinforce topics discussed in class. Quizzes test understanding of the topics where appropriate. Material is presented in a way that
-complements the successful completion of the semester-long project.
+This is a programming class. Be prepared for TONS of coding.
+
+We'll be learning and improving through practice and repitition. There will be LOTS of opportunity to practice.
+
+We'll be learning to "program/code" documentation and graphics using Quarto.
+
+We'll be learning how to communicate designs using ER diagrams and crows-feet diagrams.
+
+We'll be learning to create, retrieve, update and delete database objects using SQL.
+
+We'll be learning docker to containerize a database and application and automate the reptition.
+
+:::
+::::
+
+## CMSC 408 - Topics over time
+
+The class organized in modules. The GANNT chart below highlights the topics and their order.
+
+* Homework assignments reinforce topics discussed in class.
+* Quizzes test understanding of the topics where appropriate.
+* Lectures, homeworks and quizzes are organized in a way that complements the successful completion of the semester-long project.
 
 ```{mermaid}
 %%| echo: false
 gantt
     dateFormat M/DD/YYYY
-    axisFormat %U
+    axisFormat %W
 
-    section Modules
-    Overview : m1, 8/21/2023, 1w
-    ER Models: m2, after m1, 2w
-    DB and SQL: m3, after m2, 1w
-    Relational Algebra: m4, after m3, 2w
+    section Topics
+    ER Models : m1, 1/7/2024, 3w
+    Rel. Algebra: m4, after m1, 2w
     Normal forms: m5, after m4, 3w
-    Joins and sums: m6, after m5, 2w
-    API and DB: m7, after m6, 2w
-    (break): m8, after m7, 1w
-    DB Integrity: m9, after m8, 3w
+    SQL : m6, after m5, 4w
+    Adv. SQL: m7, after m6, 5w
 ```
 
-## Grading and deliverables
+## CMSC 408 - Assessment and Grading
+
+This will be a busy semester! There will be items due each week.
+
+### There will be a mix of activities
+
+&nbsp;
+
+::: {style="font-size:100%;"}
+<center>
+| Deliverable | Pct | Number of items |
+|:-----:|:-----:|:---|
+| Homework   |   40%   | 9 submissions done individually |
+| Quizzes | 30% | 5 quizzes taken on-line using respondus |
+| Project | 30% | 12 submissions as part of a team |
+</center>
+:::
+
+
+## CMSC 408 - Assessment and Grading
 
 This will be a busy semester! There will be items due each week.
 
 ### Homework Assignments
 
 ::: {style="font-size:0.9em;"}
-Homework assignments are done individually. Homeworks will be distributed using GITHUB classroom; a link will be provided in the Canvas assignment page. Homeworks will be
-submitted to Gradescope. Each assignment is worth 20 points. Rubrics will be
-provided. Homeworks will be written using Quarto. Homework 2 provides an opportunity
-to learn more about Quarto. Quarto will also be used for the semester project.
+Homework assignments are done individually. Homeworks will be distributed using GITHUB classroom; a link will be provided in the Canvas assignment page. Homeworks will be submitted to Gradescope. Rubrics will be provided. *REVIEW EACH RUBRIC CAREFULLY!*
 :::
 
 ```{mermaid}
@@ -142,30 +208,51 @@ to learn more about Quarto. Quarto will also be used for the semester project.
 gantt
     dateFormat M/DD/YYYY
     axisFormat %U
-    section 11 Homework submissions<br/>(40%)
-    Pre-class survey: milestone, h1, 08/23/2023, 1d
-    ER Models 1: milestone, h2, 09/01/2023, 1d
-    ER Models 2: milestone, h3, 09/08/2023, 1d
-    DB, SQL, CRUD 1: milestone, h4, 09/22/2023, 1d
-    DB, SQL, CRUD 2: milestone, h5, 09/29/2023, 1d
-    DB joins and aggregates: milestone, h6, 10/06/2023, 1d
-    Normalization: milestone, h7, 10/20/2023, 1d
-    More joins and aggregates: milestone, h8, 10/27/2023, 1d
-    API and flask: milestone, h9,11/10/2023, 1d
-    DML and integrity: milestone, h10, 12/01/2023, 1d
-    Course evaluation: milestone, h11, 12/15/2023, 1d
+
+    section Homework<br/>(9 at 40%)
+    (first day of class): milestone, fdc1, 1/7/2024, 0d
+    DE Tool review: milestone, h1, 1/20/2024, 0d
+    HW 2: milestone, h2, 1/29/2024, 0d
+    HW 3: milestone, h3, 2/10/2024, 0d
+    HW 4: milestone, h4, 3/2/2024, 0d
+    hw 5: milestone, h5, 3/16/2024, 0d
+    hw 6: milestone, h6, 3/30/2024, 0d
+    hw 7: milestone, h7, 4/6/2024, 0d
+    homework 8: milestone, h8, 4/28/2024, 0d
+    Course Evaluation: milestone, h10, 4/28/2024, 0d
+    (last day of class): milestone, ldc2, 4/28/2024, 0d
 ```
 
-## Grading and deliverables
+## CMSC 408 - Assessment and Grading
+
+This will be a busy semester! There will be items due each week.
+
+### Homework assignment policies
+
+* I observe [flexible deadlines](https://eric.ed.gov/?id=EJ1367855) for homework, NOT FOR QUIZZES OR DELIVERABLES!
+
+* READ homework rubrics to see expectations for each assignment.
+
+* In general, a *timeliness* score is reduced as assignments are submitted later.
+
+* *On-time* gets full credit and the score is reduced as submissions are later.
+
+* I realize this is NOT your only class.  But don't get too far behind!
+
+* The homework assignments are generally aligned with the semester project, so that one reinforces the other.  It pays to keep up!
+
+
+
+## CMSC 408 - Assessment and Grading
 
 This will be a busy semester! There will be items due each week.
 
 ### Quizzes
 
 ::: {style="font-size:0.9em;"}
-There will be four quizzes throughout the semester. Each quiz will be worth 30 points.
-Quizzes will be administered on-line usint the Respondus lockdown browser. It is
-the responsibility of the student to ensure that the technology works. Homework assignment 1 offers practice to work out the bugs. Quizzes will be administered during class time.
+Quizzes will be administered on-line using the Respondus lockdown browser. It is the responsibility of the student to ensure that Respondus works.  Quizzes will be adminstered outside of class.  NO LATE QUIZZES.
+
+Practice quizzes will be available. You can take practice quiz as many times as you like.  Practice quiz will look exactly like the actual quiz.  Expect each quiz to take 30-minutes or less.
 :::
 
 ```{mermaid}
@@ -174,16 +261,17 @@ gantt
     dateFormat M/DD/YYYY
     axisFormat %U
 
-    section 4 Quizzes<br/>(30%)
-    (first day of class): milestone, ldc1, 08/23/2023, 0d
-    ER Models: milestone, q1, 09/06/2023, 0d
-    Relational algebra: milestone, q2, 09/25/2023, 0d
-    Normal forms: milestone, q3, 10/16/2023, 0d
-    SQL basics: milestone, q4, 11/01/2023, 0d
-    (last day of class): milestone, ldc2, 12/11/2023, 0d
+    section Quizzes<br/>(5 at 30%)
+    (first day of class): milestone, fdc1, 1/7/2024, 0d
+    Pre-class survey: milestone, q0, 1/7/2024, 0d
+    ER Models: milestone, q1, 1/23/2024, 0d
+    Relational algebra: milestone, q2, 2/11/2024, 0d
+    Normal forms: milestone, q3, 2/27/2024, 0d
+    SQL basics: milestone, q4, 3/19/2024, 0d
+    (last day of class): milestone, ldc2, 4/28/2024, 0d
 ```
 
-## Grading and deliverables
+## CMSC 408 - Assessment and Grading
 
 This will be a busy semester! There will be items due each week.
 
@@ -191,8 +279,7 @@ This will be a busy semester! There will be items due each week.
 
 ::: {style="font-size:0.9em;"}
 Students will work in teams of 2 on a semester-long project. The project will
-require the students design and build a database backend presenting an API. The
-domain of the project is chosen by the students. Tools include SQL, python, flask, MySQL, Quarto, and others.
+require the students design, build and deploy a database driven web application.
 :::
 
 ```{mermaid}
@@ -201,21 +288,29 @@ gantt
     dateFormat M/DD/YYYY
     axisFormat %U
 
-    section 7 Project<br/>Deliverables<br/>(30%)
-    Student introductions: milestone, p1, 8/25/2023,0d
-    Team formation: milestone, p2, 8/27/2023, 0d
-    Clone team repo: milestone, p3, 9/15/2023, 0d
-    Phase 1 submission: milestone, p4, 10/13/2023, 0d
-    Project status report 1: milestone, p5, 11/03/2023, 0d
-    Project status report 2: milestone, p6, 11/17/2023, 0d
-    Phase 2 submission: milestone, p7, 12/11/2023, 0d
+    section Project<br/>Deliverables<br/>(12 at 30%)
+    (first day of class): milestone, fdc1, 1/7/2024, 0d
+    Student introductions: milestone, p1, 1/11/2024,0d
+    Team formation: milestone, p2, 1/13/2024, 0d
+    Team update: milestone, p3, 1/18/2024, 0d
+    Team update: milestone, p4, 1/25/2024, 0d
+    Proposal video: milestone, p5, 2/3/2024, 0d
+    Team update: milestone, p6, 2/8/2024, 0d
+    Team update: milestone, p7, 2/22/2024, 0d
+    Design report: milestone, p8, 3/2/2024, 0d
+    Team update: milestone, p9, 3/8/2024, 0d
+    Web docker: milestone, p10, 3/23/2024, 0d
+    Team update: milestone, p11, 4/4/2024, 0d
+    Final submission: milestone, p12, 4/28/2024, 0d
+    (last day of class): milestone, ldc2, 4/28/2024, 0d
+    
 ```
 
-## Grading and deliverables
+## CMSC 408 - Assessment and Grading
 
 This will be a busy semester! There will be items due each week.
 
-### Overview
+### Summary and grading schedule
 
 Below are tables presenting the grading scheme and deliverable list for the class. 
 
@@ -228,9 +323,9 @@ Below are tables presenting the grading scheme and deliverable list for the clas
 ### Deliverables
 | Deliverable | Pct | Number of items |
 |:-----:|:-----:|:---|
-| Homework   |   40%   | 11 submissions done individually |
-| Quizzes | 30% | 4 quizzes taken on-line using respondus |
-| Project | 30% | 7 submissions as part of a team |
+| Homework   |   40%   | 9 submissions done individually |
+| Quizzes | 30% | 5 quizzes taken on-line using respondus |
+| Project | 30% | 12 submissions as part of a team |
 </center>
 
 :::
@@ -251,7 +346,19 @@ Below are tables presenting the grading scheme and deliverable list for the clas
 :::
 ::::
 
-## Advice from your peers (Fall 2023)
+## Advice from your peers
+
+&nbsp;
+
+### From course evaluation responses, Fall 2023:
+
+::: {style="font-size: 125%; margin-left:10%; margin-right:10%; margin-top: 5%"}
+
+*Discuss the level of difficulty of this course, the pace of the course, and the level of effort required to complete the work in this course.*
+
+:::
+
+## Advice from your peers
 
 :::: {.columns}
 ::: {.column}
@@ -275,7 +382,7 @@ Below are tables presenting the grading scheme and deliverable list for the clas
 :::
 ::::
 
-## Advice from your peers (Fall 2023)
+## Advice from your peers
 
 :::: {.columns}
 ::: {.column}
@@ -302,8 +409,6 @@ Below are tables presenting the grading scheme and deliverable list for the clas
 :::
 ::::
 
-
-
-
-
-
+<center>
+### *In summary: Don't panic, you got this!*
+</center>
