--- a/fa2024/lectures/lecture-02.qmd
+++ b/fa2024/lectures/lecture-02.qmd
@@ -28,6 +28,6 @@ lecture_topics = [
 {{< include "./_template-lecture-housekeeping.qmd" >}}
 {{< include "./_template-lecture-gantt.qmd" >}}
 
-
+{{< include ../../topics/_intro-to-er-models.qmd >}}
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
