--- a/topics/entities-attributes-and-relationships-and-the-er-diagram.qmd
+++ b/topics/entities-attributes-and-relationships-and-the-er-diagram.qmd
@@ -5,6 +5,7 @@ tasl:
     tags:
     - lecture
     - lecture-02
+    - er-models
     topic: Entities, attributes and relationships<br/>and the ER Diagram
 ---
 
