--- a/topics/er-diagramming.qmd
+++ b/topics/er-diagramming.qmd
@@ -1,11 +1,12 @@
 ---
-format:
-  revealjs:
-    include-in-header:
-    - text:
-      - '|'
-      - <script src='https://toolness.github.io/p5.js-widget/p5-widget.js'></script>
 title: ER Diagramming
+format:
+    revealjs:
+        include-in-header:
+        -   text: <script src='https://toolness.github.io/p5.js-widget/p5-widget.js'></script>
+tasl:
+    tags:
+    - er-models
 ---
 
 
